# Privacy-preserving-biometrics

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  fingerprint_feature_extractor.cpp
Client_Server/: CMakeLists.txt  compute.cpp  decrypt.cpp  encrypt.cpp  keyGenerator.cpp
Harris-Corner/: fingerprint_feature_extractor.cpp
Secure_Hamming/: CMakeLists.txt  README.txt  hamming.cpp  key-gen.cpp  ppb_lib.cpp
Secure_Hamming/include/: ppb_lib.hpp
data/: 101_9.tif
data/dataset3/: README
homo/: algo  cloud  cloud.data  encrypt
lib/extraction/: CrossingNumber.cpp  Filter.cpp
lib/preprocess/: CMakeLists.txt  Makefile  cmake_install.cmake  fpenhancement.cpp  main.cpp  ridgefilter.cpp
opencv-fingerprint-master/FeatureData/: feature.txt
opencv-fingerprint-master/lib/extraction/: CrossingNumber.cpp  Filter.cpp  Minutiae.cpp  Minutiae.h
opencv-fingerprint-master/src/: fingerprint_feature_extractor.cpp
src/: compute.cpp  decrypt.cpp  encrypt.cpp  enroll.cpp  fingerprint_feature_extractor.cpp  keyGenerator.cpp
src/hamming/: CMakeLists.txt  compute.cpp  decrypt.cpp  encrypt.cpp  enroll.cpp  install.txt  keyGenerator.cpp
src/opencv-fingerprint-master/: CMakeLists.txt
src/opencv-fingerprint-master/lib/extraction/: CrossingNumber.cpp  Filter.cpp
src/opencv-fingerprint-master/src/: fingerprint_feature_extractor.cpp
test/: result1-1.txt  result2-2.txt  result3-3.txt  result4-4.txt  script.sh  test.sh
unused/Harris-Corner/: fingerprint_process
unused/Secure_Hamming/: hamming.cpp  key-gen.cpp  main.cpp
unused/Secure_Hamming/lib/: libgmp.la  libgmp.so.10.3.2
unused/homo/: answer.data  cloud.cpp  encrypt.cpp  verify
